--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <meta charset="utf-8"> 
+
 <head>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Bryan Jensen</title>
 </head>
 
-
 <body>
-
-<div id="wrapper">
-<div class="headerdiv">MySite</div>
-
-<div class="bodydiv">MyStuff</div>
-</div>
-
+	<div>Testing</div>
 </body>
+
 </html>
