--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
 <head>
 	<script type="text/javascript" src="jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Bryan Jensen</title>
 </head>
 
 <body>
-	<div>Testing</div>
+<header>
+	Bryan Jensen's Site Coming Soon
+</header>
+<div id="sidebar">
+	<ol>
+		<li><a href="/">Goto1</a></li>
+		<li><a href="/">Goto2</a></li>
+		<li><a href="/">Goto3</a></li>
+	</ol>
+</div>
+<div id="content">
+	<div id="projects"></div>
+	<div id="bio"></div>
+</div>
+<footer>
+	Self created and maintained.
+</footer>
 </body>
 
 </html>
