--- a/index.html
+++ b/index.html
@@ -14,30 +14,24 @@
   <link rel="icon" href="/img/favicon.jpg"/>
 </head>
 <body ng-controller="SiteWideCtrl">
- <!--  <ul class="menu">
-    <li><a href="#/home">home</a></li>
-    <li><a href="#/portfolio">portfolio</a></li>
-  </ul> -->
-
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
   <div class="container">
-
     <div id="name-container">
-      <h1><a ui-sref="home">Bryan Alexander William Jensen</a></h1>
+      <h1>Bryan Alexander William Jensen</h1>
     </div>
 
-    <div ui-view></div>
+    <div>
+      <div id="home-container">
+        <ul id="nav-links">
+          <li><a href="https://github.com/bawjensen" target="_blank">Github<span class="glyphicon glyphicon-new-window"></span></a></li>
+          <li><a href="https://linkedin.com/in/bawjensen" target="_blank">LinkedIn<span class="glyphicon glyphicon-new-window"></span></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
-
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.1/angular.min.js"></script> -->
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="js/app.js"></script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -46,7 +40,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-59455857-1', 'auto');
-    // ga('send', 'pageview');
+    ga('send', 'pageview');
   </script>
 </body>
 </html>
